bump version to v25.1015.1812
